--- a/css/style.css
+++ b/css/style.css
@@ -65,13 +65,65 @@ header ul li {
   margin: 1rem;
 }
 .main-features .first-feature {
+  width: 100%;
   background-color: #F7F7F7;
   border-radius: 30px;
 }
 .main-features .first-feature .text {
-  padding: 2rem;
+  padding: 1.5rem;
+}
+.main-features .first-feature .text h3 {
+  font-size: 1.9rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+.main-features .first-feature .text p {
+  color: #464646;
+  font-weight: 500;
 }
 .main-features .first-feature .image {
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+}
+.main-features div {
+  width: 100%;
+  margin: 1rem 0;
+}
+.main-features div .second-feature {
+  background-color: #7EAAFE;
+  border-radius: 30px;
+  height: 450px;
+}
+.main-features div .second-feature .text {
+  padding: 1.5rem;
+}
+.main-features div .second-feature .text h3 {
+  color: white;
+  font-size: 1.9rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+.main-features div .second-feature .image {
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+}
+.main-features div .third-feature {
+  background-color: #2B2B2B;
+  border-radius: 30px;
+  height: 450px;
+}
+.main-features div .third-feature .text {
+  padding: 1.5rem;
+}
+.main-features div .third-feature .text h3 {
+  color: white;
+  font-size: 1.9rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+.main-features div .third-feature .image {
   padding: 2rem;
   display: flex;
   justify-content: center;
