--- a/scss/_main-features.scss
+++ b/scss/_main-features.scss
@@ -4,17 +4,82 @@
     margin: 1rem;
 
     .first-feature{
+        width: 100%;
         background-color: #F7F7F7;
         border-radius: 30px;
 
         .text{
-            padding: 2rem;
+            padding: 1.5rem;
+
+            h3{
+                font-size: 1.9rem;
+                font-weight: 500;
+                margin-bottom: 1rem;
+            }
+
+            p{
+                color: #464646;
+                font-weight: 500;
+            }
         }
 
         .image{
             padding: 2rem;
             display: flex;
             justify-content: center;
+        }
+    }
+
+    div{
+        width: 100%;
+        margin: 1rem 0;
+
+        .second-feature{
+            background-color: #7EAAFE;
+            border-radius: 30px;
+            height: 450px;
+
+            .text{
+                padding: 1.5rem;
+    
+                h3{
+                    color: white;
+                    font-size: 1.9rem;
+                    font-weight: 500;
+                    margin-bottom: 1rem;
+                }
+    
+            }
+    
+            .image{
+                padding: 2rem;
+                display: flex;
+                justify-content: center;
+            }
+        }
+
+        .third-feature{
+            background-color: #2B2B2B;
+            border-radius: 30px;
+            height: 450px;
+
+            .text{
+                padding: 1.5rem;
+    
+                h3{
+                    color: white;
+                    font-size: 1.9rem;
+                    font-weight: 500;
+                    margin-bottom: 1rem;
+                }
+    
+            }
+    
+            .image{
+                padding: 2rem;
+                display: flex;
+                justify-content: center;
+            }
         }
     }
 }
