--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,19 @@ header ul li {
   display: flex;
   justify-content: center;
 }
+.main-features .first-feature .call-to-action {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 1.5rem;
+}
+.main-features .first-feature .call-to-action button {
+  border: none;
+  padding: 0.5rem 1rem;
+  background-color: #7EAAFE;
+  color: white;
+  border-radius: 10px;
+}
 .main-features div {
   width: 100%;
   margin: 1rem 0;
