--- a/scss/_main-features.scss
+++ b/scss/_main-features.scss
@@ -28,6 +28,21 @@
             display: flex;
             justify-content: center;
         }
+
+        .call-to-action{
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+            padding: 0 1.5rem;
+
+            button{
+                border: none;
+                padding: 0.5rem 1rem;
+                background-color: #7EAAFE;
+                color: white;
+                border-radius: 10px;
+            }
+        }
     }
 
     div{
