--- a/scss/_presentation.scss
+++ b/scss/_presentation.scss
@@ -9,7 +9,7 @@
 
             h1{
                 font-size: 2rem;
-                color: #312938;
+                color: var(--title-dark-color);
                 margin-bottom: 1rem;
             }
 
