--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,6 @@
-@import 'scss/nav',
+@import 'scss/variables',
+        'scss/nav',
         'scss/base',
         'scss/presentation',
-        'scss/main-features';
+        'scss/main-features',
+        'scss/premium-features';
