--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,4 +3,6 @@
     --text-dark-color: #464646;
     --text-light-color : #ffffff;
     --light-blue : #7EAAFE;
+    --salmon: #F88E8E;
+    --light-salmon: #FFD3D3;
 }
