--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,7 +1,7 @@
 header{
     display: flex;
     justify-content: space-between;
-    padding: 0 3rem;
+    padding: 0 1rem;
     border-bottom: 1px solid #d6d6d6;
     height: 5rem;
 
@@ -10,6 +10,13 @@ header{
       flex-direction: row;
       align-items: center;
       text-decoration: none;
+
+      h2{
+        font-size: 2rem;
+        font-weight: 500;
+        color: black;
+        margin-left: 1rem;
+      }
     }
 
     ul{
