--- a/scss/_premium-features.scss
+++ b/scss/_premium-features.scss
@@ -44,4 +44,45 @@
             }
         }
     }
+
+    .lastest-release{
+        margin: 1rem;
+        padding: 1.5rem 1rem 0 1rem;
+        background-color: var(--salmon);
+        border-radius: 30px;
+
+        .text{
+            .news{
+                width: 100%;
+                margin-bottom: 2rem;
+    
+                p{
+                    width: fit-content;
+                    padding: 0.5rem 1rem;
+                    background-color: var(--light-salmon);
+                    border-radius: 10px;
+                    font-weight: 500;
+                    color: black;
+                }
+            }
+
+            h3{
+                font-size: 1.9rem;
+                font-weight: 500;
+                margin-bottom: 1rem;
+                color: var(--text-light-color);
+            }
+
+            p{
+                color: var(--text-light-color);
+                font-weight: 500; 
+            }
+        }
+
+        .image{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+    }
 }
