--- a/scss/_presentation.scss
+++ b/scss/_presentation.scss
@@ -11,6 +11,7 @@
                 font-size: 2rem;
                 color: var(--title-dark-color);
                 margin-bottom: 1rem;
+                font-weight: 600;
             }
 
             p{
