--- a/style.scss
+++ b/style.scss
@@ -3,4 +3,5 @@
         'scss/base',
         'scss/presentation',
         'scss/main-features',
-        'scss/premium-features';
+        'scss/premium-features',
+        'scss/pricing';
