--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,4 +5,11 @@
     --light-blue : #7EAAFE;
     --salmon: #F88E8E;
     --light-salmon: #FFD3D3;
+    --background-pricing: #2b2b2b
+}
+
+h3{
+    font-size: 1.9rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
 }
