--- a/style.scss
+++ b/style.scss
@@ -4,4 +4,5 @@
         'scss/presentation',
         'scss/main-features',
         'scss/premium-features',
-        'scss/pricing';
+        'scss/pricing',
+        'scss/blog';
