--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -4,3 +4,9 @@
     padding: 0;
     font-family: "Poppins", sans-serif;
 }
+
+h3{
+    font-size: 1.9rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+}
