--- a/scss/_pricing.scss
+++ b/scss/_pricing.scss
@@ -3,6 +3,7 @@
     background-color: var(--background-pricing);
     border-radius: 30px;
     padding: 1rem;
+    margin-bottom: 4rem;
 
     h3{
         color: var(--text-light-color);
@@ -45,7 +46,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
-        overflow: scroll;
+        overflow: auto;
         
         article{
             width: 280px;
