--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,5 +5,5 @@
     --light-blue : #7EAAFE;
     --salmon: #F88E8E;
     --light-salmon: #FFD3D3;
-    --background-pricing: #2b2b2b
+    --background-pricing: #2b2b2b;
 }
