--- a/style.scss
+++ b/style.scss
@@ -5,4 +5,5 @@
         'scss/main-features',
         'scss/premium-features',
         'scss/pricing',
-        'scss/blog';
+        'scss/blog',
+        'scss/about-us';
