--- a/style.scss
+++ b/style.scss
@@ -6,4 +6,5 @@
         'scss/premium-features',
         'scss/pricing',
         'scss/blog',
-        'scss/about-us';
+        'scss/about-us',
+        'scss/footer';
