--- a/scss/_pricing.scss
+++ b/scss/_pricing.scss
@@ -49,11 +49,13 @@
         overflow: auto;
         
         article{
-            width: 280px;
+            width: 100%;
+            min-width: 280px;
+            max-width: 400px;
             background-color: white;
             border-radius: 15px;
             padding: 2rem;
-            margin: 0 1rem;
+            margin: 0 0.5rem;
 
             h5{
                 text-align: center;
