--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -76,7 +76,7 @@ footer{
         }
 
         .footer-contact{
-            line-height: 2.5rem;
+            line-height: 2rem;
 
             h4{
                 font-size: 1.2rem;
@@ -94,6 +94,7 @@ footer{
                 display: flex;
                 flex-direction: row;
                 flex-wrap: nowrap;
+                margin-bottom: 1rem;
                 
                 input{
                     border: none;
