--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
-@import 'scss/variables',
+@import 'scss/mixins',
+        'scss/variables',
         'scss/nav',
         'scss/base',
         'scss/presentation',
