--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -28,7 +28,7 @@ footer{
         }
         .call-to-action{
             width: 100%;
-            margin: 2rem 0;
+            margin-top: 2rem;
     
             button{
                 border: none;
@@ -53,8 +53,8 @@ footer{
         flex-wrap: wrap;
 
         .infos{
-            margin-bottom: 1.5rem;
-
+            margin: 1.5rem 1rem;
+            
             h4{
                 font-size: 1.2rem;
                 margin-bottom: 1rem;
