--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -34,11 +34,32 @@ header{
       transition: top 1s ease;
       display: none;
 
+      @include medium {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        height: 100%;
+        position: relative;
+        background: none;
+        top: 0;
+      }
+
       li{
         a{
           color: var(--text-light-color);
           font-size: 2rem;
           font-weight: 600;
+
+          @include medium{
+            display: inline-block;
+            padding: 15px;
+            text-decoration: none;
+            font-size: 1.5rem;
+            color: black;
+          }
         }
       }
 
@@ -53,5 +74,10 @@ header{
       display: flex;
       justify-content: center;
       align-items: center;
+
+      @include medium {
+        font-size: 2rem;
+        display: none;
+      }
     }
 }
