--- a/scss/_presentation.scss
+++ b/scss/_presentation.scss
@@ -12,19 +12,41 @@
                 color: var(--title-dark-color);
                 margin-bottom: 1rem;
                 font-weight: 600;
+                @include large{
+                    font-size: 2.5rem;
+                }
+                @include x-large{
+                    font-size: 3rem;
+                }
             }
 
             p{
                 font-weight: 500;
+                @include large{
+                    font-size: 1.5rem;
+                }
+            }
+
+            @include medium {
+                width: 48%;
+                padding: 2rem;
             }
         }
         .presentation-image{
             width: 100%;
-            height: 300px;
+            height: 19rem;
             background-image: url("../img/presentation-phone.png");
             background-repeat: no-repeat;
             background-position: 50% 0%;
             background-size: 150%;
+
+            @include medium {
+                width: 48%;
+            }
+
+            @include large{
+                height: 30rem;
+            }
         }
     }
 
@@ -33,5 +55,11 @@
         font-weight: 500;
         text-align: center;
         margin: 1rem;
+        @include large{
+            font-size: 2.5rem;
+        }
+        @include x-large{
+            font-size: 3rem;
+        }
     }
 }
