--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -10,4 +10,11 @@ h3{
     font-size: 1.9rem;
     font-weight: 500;
     margin-bottom: 1rem;
+    @include large{
+        font-size: 2.3rem;
+    }
+
+    @include x-large{
+        font-size: 2.8rem;
+    }
 }
