--- a/scss/_main-features.scss
+++ b/scss/_main-features.scss
@@ -1,33 +1,63 @@
 .main-features{
     display: flex;
     flex-wrap: wrap;
-    margin: 5rem 1rem;
+    margin: 3rem 1rem;
+
+    @include medium{
+        margin: 3rem 5rem;
+    }
 
     .first-feature{
         width: 100%;
         background-color: #F7F7F7;
         border-radius: 30px;
+        padding: 1rem;
 
-        .text{
-            padding: 1.5rem;
+        .first-feature-flex{
+            @include medium{
+                display: flex;
+                flex-direction: row;
+            }
 
-            p{
-                color: var(--text-dark-color);
-                font-weight: 500;
+            .text{
+                padding: 1.5rem;
+
+                p{
+                    color: var(--text-dark-color);
+                    font-weight: 500;
+
+                    @include large{
+                        font-size: 1.5rem;
+                    }
+                }
+            }
+
+            .image{
+                width: 100%;
+                margin: 1rem 0;
+                padding: 2rem;
+                display: flex;
+                justify-content: center;
+
+                @include medium{
+                    padding: 0;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
             }
         }
-
-        .image{
-            padding: 2rem;
-            display: flex;
-            justify-content: center;
-        }
-
         .call-to-action{
             width: 100%;
             display: flex;
             justify-content: flex-end;
             padding: 0 1.5rem;
+
+            @include medium{
+                width: 80%;
+                justify-content: center;
+            }
 
             button{
                 border: none;
@@ -35,18 +65,31 @@
                 background-color: var(--light-blue);
                 color: var(--text-light-color);
                 border-radius: 10px;
+
+                @include medium{
+                    font-size: 1.5rem;
+                }
             }
         }
     }
 
-    div{
+    .secondary-features{
         width: 100%;
         margin: 1rem 0;
+
+        @include medium{
+            display: flex;
+            justify-content: space-between;
+        }
 
         .second-feature{
             background-color: var(--light-blue);
             border-radius: 30px;
             height: 450px;
+
+            @include medium{
+                width: 48%;
+            }
 
             .text{
                 padding: 1.5rem;
@@ -68,6 +111,10 @@
             background-color: #2B2B2B;
             border-radius: 30px;
             height: 450px;
+
+            @include medium{
+                width: 48%;
+            }
 
             .text{
                 padding: 1.5rem;
