--- a/scss/_main-features.scss
+++ b/scss/_main-features.scss
@@ -86,6 +86,7 @@
             background-color: var(--light-blue);
             border-radius: 30px;
             height: 450px;
+            margin-bottom: 1rem;
 
             @include medium{
                 width: 48%;
