--- a/scss/_presentation.scss
+++ b/scss/_presentation.scss
@@ -6,6 +6,9 @@
 
         .presentation-text{
             margin: 1rem;
+            @include large{
+                margin: 0;
+            }
 
             h1{
                 font-size: 2rem;
@@ -28,7 +31,7 @@
             }
 
             @include medium {
-                width: 48%;
+                width: 50%;
                 padding: 2rem;
             }
         }
@@ -41,7 +44,7 @@
             background-size: 150%;
 
             @include medium {
-                width: 48%;
+                width: 50%;
             }
 
             @include large{
